src_old/objects/ProjectTypeAttribute__c.object
<CustomObject>
    <description>Define a list of attributes that the project of different type captures</description>
    <fields>
        <fullName>AttributeName__c</fullName>
        <formula>Attribute__r.AttributeTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttributeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeOrder__c</fullName>
        <label>AttributeOrder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <formula>TEXT(Attribute__r.AttributeType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttributeType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <description>Default attribute value</description>
        <inlineHelpText>Default attribute value</inlineHelpText>
        <label>AttributeValue</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Project Type attributes</relationshipLabel>
        <relationshipName>Project_Type_attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>determine if this attribute is visible or not</description>
        <inlineHelpText>Determine if this attribute is visible or not</inlineHelpText>
        <label>IsVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Type</label>
        <referenceTo>ProjectType__c</referenceTo>
        <relationshipLabel>Project Type attributes</relationshipLabel>
        <relationshipName>Project_Type_attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Type attribute</label>
    <nameField>
        <displayFormat>PTA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Type attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>